--- a/01-course/module-02-fundamentals/module2.ipynb
+++ b/01-course/module-02-fundamentals/module2.ipynb
@@ -8,7 +8,7 @@
         "\n",
         "| **Aspect** | **Details** |\n",
         "|-------------|-------------|\n",
-        "| **Goal** | Craft prompts that leverage role-playing, structured inputs, examples, and step-by-step reasoning to get consistently excellent results from AI assistants |\n",
+        "| **Goal** | Master 8 core prompt engineering tactics: role prompting, structured inputs, few-shot examples, chain-of-thought reasoning, reference citations, prompt chaining, LLM-as-judge, and inner monologue to build professional-grade AI workflows |\n",
         "| **Time** | ~90-120 minutes (1.5-2 hours) |\n",
         "| **Prerequisites** | Python 3.8+, IDE with notebook support, API access (GitHub Copilot, CircuIT, or OpenAI) |\n",
         "| **Setup Required** | Clone the repository and follow [Quick Setup](../README.md) before running this notebook |\n",
@@ -20,9 +20,7 @@
         "<div style=\"margin-top:16px; color:#991b1b; padding:12px; background:#fee2e2; border-radius:6px; border-left:4px solid #ef4444;\">\n",
         "<strong>⚠️ Important:</strong> <br><br>\n",
         "This module requires fresh setup. Even if you completed Module 1, run the setup cells below to ensure everything works correctly.<br>\n",
-        "</div>\n",
-        "\n",
-        "---"
+        "</div>"
       ]
     },
     {
@@ -534,15 +532,15 @@
         "- ⏱️ Estimated time for the next section\n",
         "\n",
         "Feel free to work at your own pace—these are suggestions, not requirements! 🚀\n",
-        "</div>\n"
+        "</div>\n",
+        "\n",
+        "---"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "---\n",
-        "\n",
         "### 🎬 Tactic 0: Write Clear Instructions\n",
         "\n",
         "**Foundation Principle** - Before diving into advanced tactics, master the art of clear, specific instructions."
@@ -646,8 +644,6 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "---\n",
-        "\n",
         "### 🎭 Tactic 1: Role Prompting\n",
         "\n",
         "**Transform AI into specialized domain experts**"
@@ -822,8 +818,6 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "---\n",
-        "\n",
         "### 📋 Tactic 2: Structured Inputs\n",
         "\n",
         "**Organize complex scenarios with XML delimiters**\n",
@@ -1024,8 +1018,6 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "---\n",
-        "\n",
         "### 📚 Tactic 3: Few-Shot Examples\n",
         "\n",
         "**Teach AI your preferred styles and standards**\n",
@@ -1094,8 +1086,6 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "---\n",
-        "\n",
         "### ⛓️‍💥 Tactic 4: Chain-of-Thought Reasoning\n",
         "\n",
         "**Guide systematic step-by-step reasoning**\n",
@@ -1234,9 +1224,7 @@
         "- **Architecture Review:** Force AI to design its own solution before critiquing proposals\n",
         "- **Test Review:** Make AI write tests before evaluating test coverage\n",
         "\n",
-        "**The Golden Rule:** *\"Don't let the AI judge until it has worked through the problem itself.\"*\n",
-        "\n",
-        "---\n"
+        "**The Golden Rule:** *\"Don't let the AI judge until it has worked through the problem itself.\"*\n"
       ]
     },
     {
@@ -1418,8 +1406,6 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "---\n",
-        "\n",
         "### 📖 Tactic 5: Reference Citations\n",
         "\n",
         "**Ground responses in actual documentation to reduce hallucinations**\n",
@@ -1439,9 +1425,7 @@
         "\n",
         "**Software Engineering Application Preview:** Critical for code review with large codebases, documentation generation from source files, security audit reports, and analyzing API documentation.\n",
         "\n",
-        "*Reference: [Claude Documentation - Long Context Tips](https://docs.claude.com/en/docs/build-with-claude/prompt-engineering/long-context-tips)*\n",
-        "\n",
-        "---\n"
+        "*Reference: [Claude Documentation - Long Context Tips](https://docs.claude.com/en/docs/build-with-claude/prompt-engineering/long-context-tips)*\n"
       ]
     },
     {
@@ -1648,16 +1632,13 @@
         "1. **Document Structure:** Used `<documents>` and `<document>` tags with `<source>` and `<document_content>` metadata\n",
         "2. **Documents First:** Placed all reference materials at the top of the prompt, before the query\n",
         "3. **Quote Extraction:** Asked AI to extract relevant quotes first, then perform analysis\n",
-        "4. **Structured Output:** Used XML tags like `<quotes>`, `<analysis>`, and `<recommendations>` to organize responses\n",
-        "---\n"
+        "4. **Structured Output:** Used XML tags like `<quotes>`, `<analysis>`, and `<recommendations>` to organize responses\n"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "---\n",
-        "\n",
         "### 🔗 Tactic 6: Prompt Chaining\n",
         "\n",
         "**Break complex tasks into sequential workflows**\n",
@@ -1694,9 +1675,7 @@
         "\n",
         "**Software Engineering Application Preview:** Essential for complex code reviews, multi-stage refactoring, comprehensive test generation, and architectural analysis where breaking down the task ensures nothing is missed.\n",
         "\n",
-        "*Reference: [Claude Documentation - Chain Complex Prompts](https://docs.claude.com/en/docs/build-with-claude/prompt-engineering/chain-prompts)*\n",
-        "\n",
-        "---\n"
+        "*Reference: [Claude Documentation - Chain Complex Prompts](https://docs.claude.com/en/docs/build-with-claude/prompt-engineering/chain-prompts)*\n"
       ]
     },
     {
@@ -2030,9 +2009,7 @@
         "- **Database migrations:** Analyze schema → Generate migration → Create rollback → Test → Deploy\n",
         "- **CI/CD pipeline generation:** Analyze project → Design workflow → Generate config → Add tests → Optimize\n",
         "\n",
-        "**Pro Tip:** You can also create **self-correction chains** where the AI reviews its own work! Just pass the output back with a review prompt to catch errors and refine results.\n",
-        "\n",
-        "---\n"
+        "**Pro Tip:** You can also create **self-correction chains** where the AI reviews its own work! Just pass the output back with a review prompt to catch errors and refine results.\n"
       ]
     },
     {
@@ -2085,8 +2062,6 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "---\n",
-        "\n",
         "### ⚖️ Tactic 7: LLM-as-Judge\n",
         "\n",
         "**Create evaluation rubrics and self-critique loops**\n",
@@ -2116,9 +2091,7 @@
         "\n",
         "**Software Engineering Application Preview:** Essential for automated code reviews, architecture decision validation, test coverage assessment, documentation quality checks, and comparing multiple implementation approaches.\n",
         "\n",
-        "*Reference: This technique combines elements from evaluation frameworks and self-critique patterns used in production AI systems.*\n",
-        "\n",
-        "---\n"
+        "*Reference: This technique combines elements from evaluation frameworks and self-critique patterns used in production AI systems.*\n"
       ]
     },
     {
@@ -2394,17 +2367,13 @@
         "- **Use weighted scoring:** Prioritize what matters most\n",
         "- **Request examples:** Ask for specific code snippets in feedback\n",
         "- **Iterate multiple times:** Don't stop at first critique\n",
-        "- **Combine with other tactics:** Use with prompt chaining for multi-stage reviews\n",
-        "\n",
-        "---\n"
+        "- **Combine with other tactics:** Use with prompt chaining for multi-stage reviews\n"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "---\n",
-        "\n",
         "### 🤫 Tactic 8: Inner Monologue\n",
         "\n",
         "**Separate reasoning from clean final outputs**\n",
@@ -2430,9 +2399,7 @@
         "3. **Extract final result:** Parse only the `<output>` section for user-facing display\n",
         "4. **Optional logging:** Store the `<thinking>` section for debugging or quality assurance\n",
         "\n",
-        "**Software Engineering Application Preview:** Critical for code generation tools, automated PR reviews, documentation generators, and customer-facing chatbots where you want intelligent responses without exposing the AI's reasoning process.\n",
-        "\n",
-        "---\n"
+        "**Software Engineering Application Preview:** Critical for code generation tools, automated PR reviews, documentation generators, and customer-facing chatbots where you want intelligent responses without exposing the AI's reasoning process.\n"
       ]
     },
     {
@@ -2570,9 +2537,7 @@
         "thinking = extract_tag(response, 'thinking')  # Log for debugging\n",
         "```\n",
         "\n",
-        "**Pro Tip:** You can combine inner monologue with other tactics! Use it with prompt chaining for multi-step workflows where each step produces clean output, or with role prompting for specialized expert responses without verbose explanations.\n",
-        "\n",
-        "---\n"
+        "**Pro Tip:** You can combine inner monologue with other tactics! Use it with prompt chaining for multi-step workflows where each step produces clean output, or with role prompting for specialized expert responses without verbose explanations.\n"
       ]
     },
     {
@@ -2623,7 +2588,8 @@
         "  </p>\n",
         "</div>\n",
         "\n",
-        "---\n"
+        "---\n",
+        "\n"
       ]
     },
     {
@@ -2973,15 +2939,13 @@
         "- ✅ Built prompt chains with reference citations (Activity 2.3)\n",
         "- ✅ Created self-improvement loops with clean output (Activity 2.4)\n",
         "\n",
-        "---\n"
+        "---"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "---\n",
-        "\n",
         "## 📈 Track Your Progress\n",
         "\n",
         "> **💡 New to Skills Checklists?** See [Tracking Your Progress](../../README.md#-tracking-your-progress) in the main README for details on how the Skills Checklist works and when to check off skills.\n",
@@ -3122,8 +3086,6 @@
         "8. 🤫 **Inner Monologue** - Separate reasoning from clean final outputs\n",
         "\n",
         "This is exactly how professional developers use AI assistants for real-world software engineering tasks!\n",
-        "\n",
-        "---\n",
         "\n",
         "## 🎊 Module 2 Complete!\n",
         "\n",
